JDK-7152955 : print_method crashes with null root
  • Type: Bug
  • Component: hotspot
  • Sub-Component: compiler
  • Affected Version: hs24
  • Priority: P5
  • Status: Resolved
  • Resolution: Fixed
  • OS: generic
  • CPU: generic
  • Submitted: 2012-03-12
  • Updated: 2013-06-26
  • Resolved: 2012-03-24
The Version table provides details related to the release that this issue/RFE will be addressed.

Unresolved : Release in which this issue/RFE will be addressed.
Resolved: Release in which this issue/RFE has been resolved.
Fixed : Release in which this issue/RFE has been fixed. The release containing this fix may be available for download as an Early Access Release or a General Availability Release.

To download the current JDK release, click here.
JDK 7 JDK 8 Other
7u40Fixed 8Fixed hs24Fixed
Description
print_method crashes sometimes with root null when IdealPrintLevel is higher than 1.

Global code motion may fail to schedule code (schedule_late), when that happens the clean-up routine sets the root field to null. The following print_method expects the root to be set and crashes.

Fix: Move print_method below failing() check.

Comments
EVALUATION http://hg.openjdk.java.net/hsx/hotspot-rt/hotspot/rev/dbd21c7c833f
28-03-2012

EVALUATION http://hg.openjdk.java.net/hsx/hotspot-comp/hotspot/rev/dbd21c7c833f
14-03-2012

EVALUATION Move print_method below failing()-check
12-03-2012