7152955: print_method crashes with null root

Reviewed-by: kvn, never